# holiday-peak-hub

./: .gitignore  .tmp-deploy-azd-main.yml  CHANGELOG.md  CONTRIBUTING.md  README.MD  SECURITY.MD  azure.yaml
.devcontainer/: devcontainer.json  on-create.sh  post-create.sh
.githooks/: pre-push
.infra/: README.md  (+3 more)
apps/crm-campaign-intelligence/src/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/crm-campaign-intelligence/src/crm_campaign_intelligence/: adapters.py  agents.py  main.py
apps/crm-campaign-intelligence/src/crm_campaign_intelligence.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/crud-service/src/: pyproject.toml
apps/crud-service/src/crud_service/: __init__.py  main.py  returns_lifecycle.py
apps/crud-service/src/crud_service/auth/: __init__.py  dependencies.py
apps/crud-service/src/crud_service/composition/: __init__.py  commerce.py  platform.py  staff.py  truth.py
apps/crud-service/src/crud_service/config/: __init__.py  settings.py
apps/crud-service/src/crud_service/consumers/: __init__.py  connector_sync.py
apps/crud-service/src/crud_service/integrations/: __init__.py  agent_client.py  event_publisher.py
apps/crud-service/src/crud_service/repositories/: __init__.py  base.py  cart.py  inventory.py  order.py  product.py  refund.py  reservation.py  return_request.py  user.py
apps/crud-service/src/crud_service/routes/: __init__.py  acp_products.py  auth.py  brand_shopping.py  cart.py  categories.py  checkout.py  connector_webhooks.py  health.py  inventory.py  orders.py  payments.py  products.py  returns.py  reviews.py  users.py  webhooks.py
apps/crud-service/src/crud_service/routes/staff/: __init__.py  analytics.py  returns.py  shipments.py  tickets.py
apps/crud-service/src/crud_service/schemas/: __init__.py
apps/crud-service/src/crud_service/schemas/api/: __init__.py  cart.py  inventory.py  products.py
apps/crud-service/src/crud_service/schemas/domain/: __init__.py  cart.py  inventory.py  products.py
apps/crud-service/src/crud_service/scripts/: seed_demo_data.py
apps/crud-service/src/crud_service/services/: __init__.py  cart_service.py  inventory_service.py  product_service.py
apps/logistics-carrier-selection/src/: Dockerfile  pyproject.toml  requirements.txt
apps/logistics-carrier-selection/src/logistics_carrier_selection/: agents.py  main.py
apps/product-management-consistency-validation/src/: Dockerfile  pyproject.toml  requirements.txt
apps/product-management-consistency-validation/src/product_management_consistency_validation/: adapters.py  agents.py  completeness_engine.py  event_consumer.py  main.py
apps/search-enrichment-agent/src/: Dockerfile  pyproject.toml  requirements.txt
apps/search-enrichment-agent/src/search_enrichment_agent/: agents.py  event_handlers.py  main.py
apps/truth-export/src/: Dockerfile  pyproject.toml  requirements.txt
apps/truth-export/src/truth_export/: adapters.py  agents.py  event_handlers.py  export_engine.py  main.py  routes.py  schemas_compat.py
apps/truth-ingestion/src/: Dockerfile  pyproject.toml  requirements.txt
apps/truth-ingestion/src/truth_ingestion/: __init__.py  adapters.py  agent.py  agents.py  event_handlers.py  main.py  routes.py
lib/src/: README.md  pyproject.toml
lib/src/holiday_peak_lib/: app_factory.py
lib/src/holiday_peak_lib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lib/src/holiday_peak_lib/adapters/: __init__.py  acp_mapper.py  base.py  crud_adapter.py  dam_image_analysis.py
lib/src/holiday_peak_lib/agents/: base_agent.py  builder.py  complexity.py  foundry.py  provider_policy.py  registration_helpers.py  service_agent.py  telemetry_mixin.py
lib/src/holiday_peak_lib/agents/memory/: __init__.py  builder.py  cold.py  hot.py  namespace.py  warm.py
lib/src/holiday_peak_lib/agents/orchestration/: router.py
lib/src/holiday_peak_lib/app_factory_components/: __init__.py  endpoints.py  foundry_lifecycle.py  middleware.py
lib/src/holiday_peak_lib/config/: settings.py  tenant_config.py
lib/src/holiday_peak_lib/connectors/: __init__.py  registry.py  tenant_config.py  tenant_resolver.py
lib/src/holiday_peak_lib/connectors/common/: __init__.py  protocols.py
lib/src/holiday_peak_lib/connectors/crm_loyalty/: __init__.py
lib/src/holiday_peak_lib/connectors/crm_loyalty/adobe_aep/: __init__.py  auth.py  connector.py  mappings.py
lib/src/holiday_peak_lib/connectors/crm_loyalty/dynamics365_ce/: __init__.py  auth.py  connector.py  mappings.py
lib/src/holiday_peak_lib/connectors/crm_loyalty/salesforce/: __init__.py  auth.py  connector.py  mappings.py
lib/src/holiday_peak_lib/connectors/dam/cloudinary/: auth.py  connector.py  mappings.py
lib/src/holiday_peak_lib/connectors/inventory_scm/: __init__.py
lib/src/holiday_peak_lib/connectors/inventory_scm/oracle_scm/: __init__.py  auth.py  connector.py  mappings.py
lib/src/holiday_peak_lib/connectors/inventory_scm/sap_s4hana/: __init__.py  auth.py  connector.py  mappings.py
lib/src/holiday_peak_lib/connectors/pim/akeneo/: auth.py  connector.py  mappings.py
lib/src/holiday_peak_lib/connectors/pim/salsify/: mappings.py
lib/src/holiday_peak_lib/events/: __init__.py  connector_events.py  retail_events.py
lib/src/holiday_peak_lib/integrations/: __init__.py  dam_generic.py  pim_generic_rest.py  pim_writeback.py
lib/src/holiday_peak_lib/mcp/: __init__.py  ai_search_indexing.py  server.py
lib/src/holiday_peak_lib/schemas/: __init__.py  acp.py  search.py  truth.py  ucp.py
lib/src/holiday_peak_lib/schemas/canonical/: __init__.py  base_schema.py
lib/src/holiday_peak_lib/schemas/categories/: apparel.json  electronics.json  general.json
lib/src/holiday_peak_lib/schemas/mappings/: __init__.py
lib/src/holiday_peak_lib/schemas/protocols/: __init__.py
lib/src/holiday_peak_lib/self_healing/: kernel.py
lib/src/holiday_peak_lib/truth/: __init__.py  evidence.py  schemas.py
lib/src/holiday_peak_lib/utils/: __init__.py  bulkhead.py  circuit_breaker.py  correlation.py  event_hub.py  inventory_rules.py  logging.py  telemetry.py  truth_event_hub.py
(+839 files in other folders)
