[project]
name = "holiday-peak-lib"
version = "0.2.1"
description = "Core micro-framework for retail agent adapters, agents, and memory tiers"
authors = [
    {name = "Ricardo Cataldi", email = "rcataldi@microsoft.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "fastapi-mcp",
    "uvicorn",
    "pydantic>=2",
    "pydantic-settings>=2",
    "agent-framework>=1.0.1",
    "httpx",
    "azure-ai-projects>=2.0.0b4",
    "azure-identity",
    "azure-keyvault-secrets",
    "azure-search-documents",
    "azure-cosmos",
    "azure-storage-blob",
    "azure-eventhub",
    "azure-monitor-opentelemetry>=1.7.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "redis",
    "asyncpg",
    "aiohttp",
    "pyyaml",
    "typing-extensions",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "faker",
    "pre-commit",
    "python-dotenv",
    "debugpy"
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "httpx",
    "requests"
]
lint = [
    "pylint",
    "isort",
    "black[jupyter]>=26.3.1",
]
docs = [
    "mkdocs",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["holiday_peak_lib*"]
namespaces = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q -s --cov=holiday_peak_lib --cov-report=term-missing --cov-report=html --cov-fail-under=80"
testpaths = ["../tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "async: marks tests as async (select with '-m async')",
    "slow: marks tests as slow (select with '-m slow')"
]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "*/adapters/crm_adapter.py",
    "*/adapters/funnel_adapter.py",
    "*/adapters/inventory_adapter.py",
    "*/adapters/logistics_adapter.py",
    "*/adapters/pricing_adapter.py",
    "*/adapters/product_adapter.py",
    "*/adapters/mock_adapters.py"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pylint]
fail-under = 8.5
max-line-length = 100
max-complexity = 10
good-names = ["i", "j", "k", "ex", "Run", "_"]
disable = [
    "C0114", "C0115", "C0116", "C0301",
    "W3101",
    "E0401"
]
load-plugins = [
    "pylint.extensions.mccabe",
]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']
include = '\\.pyi?$'
exclude = '\\.git|\\.hg|\\.mypy_cache|\\.tox|\\.venv|_build|buck-out|build|dist'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
