[project]
name = "truth-ingestion"
version = "0.1.0"
description = "Truth Ingestion service — pulls products from PIM/DAM and stores them in the Product Truth Layer"
authors = [
    {name = "Holiday Peak Hub", email = "noreply@microsoft.com"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "fastapi-mcp",
    "uvicorn>=0.44.0",
    "pydantic>=2",
    "agent-framework>=1.0.1",
    "azure-ai-projects>=2.0.1",
    "azure-identity",
    "azure-cosmos",
    "azure-storage-blob",
    "azure-eventhub",
    "redis>=7.4.0",
    "httpx",
    "holiday-peak-lib>=0.2.0"
]

[project.optional-dependencies]
dev = ["faker", "pre-commit", "python-dotenv", "debugpy"]
test = ["pytest", "pytest-cov", "pytest-asyncio", "httpx", "requests"]
lint = ["pylint", "isort", "black[jupyter]>=25.1.0"]

[tool.uv.sources]
holiday-peak-lib = { git = "https://github.com/Azure-Samples/holiday-peak-hub.git", branch = "main", subdirectory = "lib/src" }

[tool.pytest.ini_options]
addopts = "-ra -q -s --cov=truth_ingestion --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

